[SOUP] Network Cache: Handle the case when we fail to create the IO stream https://bugs.webkit.org/show_bug.cgi?id=145406

Reviewed by Sergio Villar Senin.

We were asserting in that case, but it can happen that we
fail to create the stream. It happened to me after r184690, that
changed the NetworkCache::Key hash. Since this was not expected to
happen, the async operation never finished and the completion
handler never called, leaving resources loading forever. We
should make sure we call the completion handler with an error
code, so that the load finishes and the entry is silently removed
from the cache.

* NetworkProcess/cache/NetworkCacheIOChannelSoup.cpp:
(WebKit::NetworkCache::IOChannel::read):
(WebKit::NetworkCache::IOChannel::readSync):
(WebKit::NetworkCache::IOChannel::write):

Canonical link: https://commits.webkit.org/163415@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@184901 268f45cc-cd09-0410-ab3c-d52691b4dbfc